[project]
name = "init-data-python"
version = "0.1.0"
description = "Python library to simplify Telegram Mini Apps init data validation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true